FindaVenue/force-app/main/default/objects/Account/fields/Venue_Type__c.field-meta.xml
<CustomField>
    <fullName>Venue_Type__c</fullName>
    <label>Venue Type 1</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Christmas Team Dinner</fullName>
            </value>
            <value>
                <fullName>Company Christmas Party</fullName>
            </value>
            <value>
                <fullName>Christmas Team Area Reserved</fullName>
            </value>
            <value>
                <fullName>Christmas Drinks Only</fullName>
            </value>
            <value>
                <fullName>Corporate Dinner</fullName>
            </value>
            <value>
                <fullName>Gala Dinner</fullName>
            </value>
            <value>
                <fullName>Halloween Party</fullName>
            </value>
            <value>
                <fullName>Large Conference Event</fullName>
            </value>
            <value>
                <fullName>Small Conference Event</fullName>
            </value>
            <value>
                <fullName>Company Summer Party</fullName>
            </value>
            <value>
                <fullName>Company Off Site Event</fullName>
            </value>
            <value>
                <fullName>Company Family Fun Day</fullName>
            </value>
            <value>
                <fullName>Outdoor Corporate Event</fullName>
            </value>
            <value>
                <fullName>After Work Party</fullName>
            </value>
            <value>
                <fullName>Launch Party/Networking Event</fullName>
            </value>
            <value>
                <fullName>Company Day Out/Night Away</fullName>
            </value>
            <value>
                <fullName>Sports and Social Event</fullName>
            </value>
            <value>
                <fullName>Award Ceremony</fullName>
            </value>
            <value>
                <fullName>PR Event</fullName>
            </value>
            <value>
                <fullName>Charity Event</fullName>
            </value>
            <value>
                <fullName>Restaurant Booking</fullName>
            </value>
            <value>
                <fullName>30th Birthday</fullName>
            </value>
            <value>
                <fullName>40th Birthday</fullName>
            </value>
            <value>
                <fullName>50th Birthday</fullName>
            </value>
            <value>
                <fullName>Other Birthday Party</fullName>
            </value>
            <value>
                <fullName>Wedding</fullName>
            </value>
            <value>
                <fullName>Engagement</fullName>
            </value>
            <value>
                <fullName>Anniversary</fullName>
            </value>
            <value>
                <fullName>Hotel with Accommodation</fullName>
            </value>
            <value>
                <fullName>College Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>