FindaVenue/force-app/main/default/objects/Account/fields/Venue_Type_New__c.field-meta.xml
<CustomField>
    <fullName>Venue_Type_New__c</fullName>
    <label>Venue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Bar</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Outdoor  sports day  venue</fullName>
            </value>
            <value>
                <fullName>Stadium venue</fullName>
            </value>
            <value>
                <fullName>Conference centre</fullName>
            </value>
            <value>
                <fullName>Resort</fullName>
            </value>
            <value>
                <fullName>Castle</fullName>
            </value>
            <value>
                <fullName>Landmark Venue</fullName>
            </value>
            <value>
                <fullName>Unique Venue</fullName>
            </value>
            <value>
                <fullName>Team Building Venue</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Theatre</fullName>
            </value>
            <value>
                <fullName>Live Music Venue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>