FindaVenue/force-app/main/default/objects/Account/fields/Wheelchair_Accessible__c.field-meta.xml
<CustomField>
    <fullName>Wheelchair_Accessible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wheelchair Accessible</label>
    <type>Checkbox</type>
</CustomField>