FindaVenue/force-app/main/default/objects/Account/listViews/Venue_Accounts.listView-meta.xml
<ListView>
    <fullName>Venue_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Venue</value>
    </filters>
    <label>Venue Accounts</label>
</ListView>